docs: document ScoutingReportService and implement report retrieval